--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M662.635 460.563q0-87.1-61.912-149.013t-149.013-61.912-149.013 61.912-61.912 149.013 61.912 149.013 149.013 61.912 149.013-61.912 61.912-149.013zM903.69 852.278q0 24.482-17.891 42.373t-42.373 17.891q-25.424 0-42.373-17.891l-161.488-161.017q-84.276 58.381-187.853 58.381-67.326 0-128.768-26.13t-105.933-70.622-70.622-105.933-26.13-128.768 26.13-128.768 70.622-105.933 105.933-70.622 128.768-26.13 128.767 26.13 105.933 70.622 70.622 105.933 26.13 128.768q0 103.578-58.381 187.853l161.488 161.488q17.421 17.421 17.421 42.373z"/>
+<!--首页矩形圆角搜索框-->
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-</vector>
+    <!--填充的颜色，背景设置成半透明-->
+    <solid android:color="#20000000"/>
+
+    <!--边框的颜色-->
+    <stroke
+        android:width="1dp"
+        android:color="#ffffff"/>
+
+    <!--弧形的半径-->
+    <corners
+        android:radius="20dp"/>
+
+    <!--文字与每一条边的间距-->
+    <padding
+        android:bottom="5dp"
+        android:left="100dp"
+        android:right="100dp"
+        android:top="5dp" />
+</shape>
