--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/loginbackground"
+    android:background="#53C7F0"
     tools:context="com.example.a00.bdcapp.LoginActivity">
 
         <ScrollView
@@ -14,7 +14,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <ImageView
+                <com.example.a00.fragment1.CircleImageView
                     android:id="@+id/logo"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -29,7 +29,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="30dp"
                     android:hint="账户/手机号"
-                    android:textColor="#FFAD33"
+                    android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <EditText
@@ -39,7 +39,7 @@
                     android:layout_gravity="center"
                     android:hint="密码"
                     android:inputType="textPassword"
-                    android:textColor="#FFAD33"
+                    android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <LinearLayout
@@ -52,15 +52,16 @@
                         android:id="@+id/login"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="#00000000"
+                        android:background="@drawable/ic_button"
                         android:text="登录"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        />
 
                     <Button
                         android:id="@+id/register"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="#00000000"
+                        android:background="@drawable/ic_button"
                         android:text="注册"
                         android:textSize="16sp" />
 
