--- a/app/src/main/res/layout/item_classify.xml
+++ b/app/src/main/res/layout/item_classify.xml
@@ -7,5 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="组合"
+        android:textSize="30sp"
+        android:textColor="@drawable/item_text_selector"
         android:id="@+id/word_classify"/>
 </RelativeLayout>
