--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -3,12 +3,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <!--填充的颜色，背景设置成半透明-->
-    <solid android:color="#20000000"/>
+    <solid android:color="#10000000"/>
 
     <!--边框的颜色-->
     <stroke
         android:width="1dp"
-        android:color="#ffffff"/>
+        android:color="#53C7F0"/>
 
     <!--弧形的半径-->
     <corners
