--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -60,18 +60,20 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:divider="@drawable/divider_line"
+            android:showDividers="beginning">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="UNIT"
-                android:layout_margin="@dimen/activity_vertical_margin"
-                android:textSize="30dp"/>
+                android:textColor="#53C7F0"
+                android:textSize="30sp"/>
             <ListView
                 android:id="@+id/unit_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/activity_vertical_margin">
+                android:layout_marginStart="@dimen/activity_vertical_margin">
             </ListView>
         </LinearLayout>
     </LinearLayout>
