--- a/app/src/main/res/layout/activity_get_picture.xml
+++ b/app/src/main/res/layout/activity_get_picture.xml
@@ -27,7 +27,7 @@
                 android:layout_height="42dp"
                 android:gravity="center"
                 android:text="请选择照片的获取方式"
-                android:textColor="#000000"
+                android:textColor="#53C7F0"
                 android:textSize="15sp" />
 
 
@@ -39,50 +39,9 @@
             android:layout_height="42dp"
             android:layout_marginTop="15dp"
             android:text="取消"
+            android:textColor="#53C7F0"
             android:textSize="18sp" />
 
     </LinearLayout>
-
-   <!-- <LinearLayout
-        android:id="@+id/pop_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        >
-
-
-        <Button
-            android:id="@+id/pic_camera"
-            android:layout_marginLeft="20dip"
-            android:layout_marginRight="20dip"
-            android:layout_marginTop="20dip"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="拍照" />
-
-        <Button
-            android:id="@+id/pic_album"
-            android:layout_marginLeft="20dip"
-            android:layout_marginRight="20dip"
-            android:layout_marginTop="5dip"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="从相册选择"
-            />
-
-        <Button
-            android:id="@+id/cancel"
-            android:layout_marginLeft="20dip"
-            android:layout_marginRight="20dip"
-            android:layout_marginTop="15dip"
-            android:layout_marginBottom="15dip"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="取消"
-            android:textColor="#ffffff"
-            />
-    </LinearLayout>-->
 
 </LinearLayout>
