--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -65,7 +65,7 @@
             android:layout_height="30dp"
             android:layout_alignEnd="@+id/register_verifycode"
             android:layout_marginEnd="39dp"
-            android:background="#42c5f9"
+            android:background="#53C7F0"
             android:text="获取验证码" />
 
     </LinearLayout>
