--- a/app/src/main/res/layout/activity_review_plan.xml
+++ b/app/src/main/res/layout/activity_review_plan.xml
@@ -7,69 +7,67 @@
     android:orientation="vertical"
     tools:context="com.example.a00.fragment1.ReviewPlanActivity">
 
-    <ScrollView
+    <ImageButton
+        android:id="@+id/pronouce"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/ic_pro" />
+
+    <TextView
+        android:id="@+id/word_complement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
-
-        <LinearLayout
-            android:id="@+id/id_ll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/word_show"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        android:gravity="center"
+        android:text="w_rd"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:layout_below="@+id/pronouce"/>
 
 
-                <ImageButton
-                    android:id="@+id/pronouce"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/pro_icon" />
+    <EditText
+        android:id="@+id/word_write"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:hint="听发音拼写单词"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:textSize="25sp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/word_complement"/>
 
-                <TextView
-                    android:id="@+id/word_complement"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="w_rd"
-                    android:textSize="30sp" />
 
-                <EditText
-                    android:id="@+id/word_write"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:hint="听发音拼写单词"
-                    android:textSize="15sp" />
+    <Button
+        android:id="@+id/sure"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_button"
+        android:gravity="center"
+        android:text="确认"
+        android:textSize="18sp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_below="@+id/word_write"/>
 
-                <Button
-                    android:id="@+id/sure"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="确认" />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/word_show"
-                    android:text="释义："
-                    android:textSize="20sp" />
-                <TextView
-                    android:id="@+id/word_mean"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/activity_vertical_margin"
-                    android:textSize="20sp" />
-            </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="释义："
+        android:textSize="20sp"
+        android:layout_marginStart="@dimen/activity_vertical_margin"
+        android:layout_marginEnd="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/sure"
+        android:id="@+id/word_shiyi"/>
 
-        </LinearLayout>
-    </ScrollView>
+    <TextView
+        android:id="@+id/word_mean"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_below="@+id/word_shiyi"/>
 
 </RelativeLayout>
