--- a/app/src/main/res/layout/activity_reviewplan_seeting.xml
+++ b/app/src/main/res/layout/activity_reviewplan_seeting.xml
@@ -32,7 +32,7 @@
             android:id="@+id/dic_number"
             android:text="10"
             android:textSize="15sp"
-            android:textColor="#00a8f3"/>
+            android:textColor="#53C7F0"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,7 +53,7 @@
             android:id="@+id/mem_number"
             android:text="10"
             android:textSize="15sp"
-            android:textColor="#00a8f3"/>
+            android:textColor="#53C7F0"/>
     </LinearLayout>
 
 
