--- a/app/src/main/res/layout/activity_word_info.xml
+++ b/app/src/main/res/layout/activity_word_info.xml
@@ -1,116 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.a00.fragment1.WordInfoActivity">
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/meaning_layout">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_vertical_margin"
-            android:id="@+id/word"
-            android:textSize="25dp"
-            android:layout_below="@+id/search"/>
         <LinearLayout
-            android:id="@+id/pro_layout"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_vertical_margin" >
-            <ImageButton
-                android:id="@+id/pro_uk_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/pro_icon"/>
-            <TextView
-                android:id="@+id/ph_uk"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="英式"/>
-            <ImageButton
-                android:id="@+id/pro_usa_icon"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/pro_icon"/>
-            <TextView
-                android:id="@+id/ph_usa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="美式"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/mean"
-            android:layout_marginRight="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_vertical_margin"
             android:orientation="vertical"
+            android:id="@+id/ll_word"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_vertical_margin">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="基本释义"
-                android:id="@+id/meaning"
-                android:layout_below="@+id/yinbiao"
-                android:layout_marginTop="5dp"/>
-            <TextView
-                android:id="@+id/meaningshow"
+                android:layout_marginStart="20dp"
+                android:id="@+id/word"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:textColor="#000000"
+                android:layout_marginTop="10dp"/>
+            <LinearLayout
+                android:id="@+id/pro_layout"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/meaning"
-                android:layout_marginTop="5dp"
-                android:textSize="18sp"
-                android:inputType="textMultiLine"/>
-
+                >
+                <ImageButton
+                    android:id="@+id/pro_uk_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_pro"/>
+                <TextView
+                    android:id="@+id/ph_uk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="英式"/>
+                <ImageButton
+                    android:id="@+id/pro_usa_icon"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_pro"/>
+                <TextView
+                    android:id="@+id/ph_usa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="美式"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/mean"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@drawable/divider_line"
+                android:showDividers="beginning">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="基本释义"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:id="@+id/meaning"
+                    android:layout_marginTop="10dp"/>
+                <TextView
+                    android:id="@+id/meaningshow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:textSize="20sp" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"/>
-    <LinearLayout
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:id="@+id/sentence"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="例句"
-            android:id="@+id/eg"
-            android:layout_below="@+id/meaningshow"
-            android:layout_marginTop="5dp"/>
-        <TextView
-            android:layout_margin="@dimen/activity_vertical_margin"
+        <LinearLayout
+            android:id="@+id/sentence"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:id="@+id/sentence_text_view"
-            android:layout_below="@+id/eg"
-            android:layout_marginTop="5dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/relatedwords"
-            android:text="派生词"
-            android:layout_below="@+id/egshow"
-            android:layout_marginTop="5dp"/>
+            android:layout_below="@+id/ll_word"
+            android:divider="@drawable/divider_line"
+            android:showDividers="beginning"
+            android:layout_marginStart="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_vertical_margin">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="例句"
+                android:textColor="#000000"
+                android:id="@+id/eg"
+                android:textSize="20sp"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sentence_text_view"
+                android:textSize="20sp"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/relatedwords"
+                android:text="派生词"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:layout_marginTop="5dp"/>
 
-        <TextView
-            android:id="@+id/rwshow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/relatedwords"
-            android:layout_marginTop="5dp" />
+            <TextView
+                android:id="@+id/rwshow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textSize="20sp"/>
+        </LinearLayout>
+
     </LinearLayout>
-</LinearLayout>
+
+</ScrollView>
