--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -2,23 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
     <TextView
         android:id="@+id/word_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="40dp"
         android:text=""
-        android:textSize="20dp"/>
+        android:textSize="25sp"/>
     <TextView
         android:id="@+id/word_mean"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="40dp"
         android:maxLines="1"
         android:ellipsize="end"
-        android:text=""/>
+        android:text=""
+        android:textSize="25sp"/>
 
 
 </LinearLayout>
